# python-relevai

./: .gitignore  README.md  pyproject.toml
relevai/: __init__.py  exceptions.py  utils.py
relevai/ailang/: __init__.py  client.py
relevai/key/: __init__.py  base.py  client.py  service.py
relevai/serializer/: __init__.py  base.py  json.py  lz4.py  msgpack.py
